src/stylesheet/global.css
:root {
	--background: 0 0% 100%;
	--foreground: 20 14.3% 4.1%;
	--card: 0 0% 100%;
	--card-foreground: 20 14.3% 4.1%;
	--popover: 0 0% 100%;
	--popover-foreground: 20 14.3% 4.1%;
	--primary: 24.6 95% 53.1%;
	--primary-foreground: 60 9.1% 97.8%;
	--secondary: 60 4.8% 95.9%;
	--secondary-foreground: 24 9.8% 10%;
	--muted: 60 4.8% 95.9%;
	--muted-foreground: 25 5.3% 44.7%;
	--accent: 60 4.8% 95.9%;
	--accent-foreground: 24 9.8% 10%;
	--destructive: 0 84.2% 60.2%;
	--destructive-foreground: 60 9.1% 97.8%;
	--border: 20 5.9% 90%;
	--input: 20 5.9% 90%;
	--ring: 24.6 95% 53.1%;
	--radius: 1rem;
}
html {
	font-family: 'Space Grotesk', sans-serif;
	height: 100%;
}
body {
	min-height: 100vh;
}
html[data-theme='light'] {
	background-color: #d3e8ce;
	transition: linear color 0.3s;
	color: var(--dark-shades);
	& footer {
		color: var(--light-shades);
		background-color: var(--main-brand);
	}
}
html[data-theme='dark'] {
	--background: 20 14.3% 4.1%;
	--foreground: 60 9.1% 97.8%;
	--card: 20 14.3% 4.1%;
	--card-foreground: 60 9.1% 97.8%;
	--popover: 20 14.3% 4.1%;
	--popover-foreground: 60 9.1% 97.8%;
	--primary: 20.5 90.2% 48.2%;
	--primary-foreground: 60 9.1% 97.8%;
	--secondary: 12 6.5% 15.1%;
	--secondary-foreground: 60 9.1% 97.8%;
	--muted: 12 6.5% 15.1%;
	--muted-foreground: 24 5.4% 63.9%;
	--accent: 12 6.5% 15.1%;
	--accent-foreground: 60 9.1% 97.8%;
	--destructive: 0 72.2% 50.6%;
	--destructive-foreground: 60 9.1% 97.8%;
	--border: 12 6.5% 15.1%;
	--input: 12 6.5% 15.1%;
	--ring: 20.5 90.2% 48.2%;

	.card-body {
		.card-title {
			color: #d3d3d3;
		}
		& small {
			color: #d3d3d3;
		}
		& .card-actions a {
			color: #d3d3d3;
		}
	}
}
::-webkit-scrollbar {
	width: 3px;
}
::-webkit-scrollbar-thumb {
	background: #333;
	border-radius: 5px;
}
footer {
	grid-row: 2; /* Place footer in the second row */
}

